<resources>
    <string name="app_name">Pendulum</string>
    <string name="image">image</string>
    <string name="name_capital">NAME</string>
    <string name="email_id">EMAIL ID</string>
    <string name="password">PASSWORD</string>
    <string name="need_account">Need Account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot">Forgot?</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="location">Native Place</string>
    <string name="upload_photo">Upload photo</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
    <string name="email">Email</string>
    <string name="mirror">Page</string>
    <string name="mirrors">Pages</string>
    <string name="invisibility_in_reflection">Invisibility in Reflection</string>
    <string name="arena">Arena</string>
    <string name="don_t_show_me_in_open_search">Don\'t show me in open search</string>
    <string name="about">About</string>
    <string name="log_out">Log out</string>
    <string name="password_small">Password is small(4 minimum)</string>
    <string name="phone_number">Phone number</string>
    <string name="contest">Contest</string>
    <string name="see_more">See more</string>
    <string name="no_result_found">No result found.</string>
    <string name="create_mirror">Create page</string>
    <string name="search_result">Search result</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="tap_here_to_vote">Tap here to vote</string>
    <string name="tap_here_to_change_the_vote">Tap here to change vote</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="server_error_from_api">Something went wrong. Please try again!</string>
    <string name="status_is_false">Status is false</string>
    <string name="wrong_case_selection">Wrong case selection</string>
    <string name="data_data_DSD_pics"><![CDATA[<string name=\"data_data_DSD_pics\">data/data/DSD/pics</string>]]></string>
    <string name="phone_number_capital">PHONE NUMBER</string>
    <string name="password_capital">PASSWORD</string>
    <string name="confirm_password_capital">CONFIRM PASSWORD</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="password_not_match">Password did not match</string>
    <string name="time_sheet">Time Sheet</string>
    <string name="settings">Settings</string>
    <string name="token">Chat invites</string>

    <string name="Please_fill_all_fields">Please fill all fields</string>
    <string name="user_details_not_available">User details not available</string>
    <string name="user_profile_details_not_available">User profile details not available</string>
    <string name="data_not_available">Data not available</string>
    <string name="under_development">Under development</string>
    <string name="please_enter_location">Please enter Location</string>
    <string name="please_enter_gender">Please enter Gender</string>
    <string name="please_enter_age">Please enter Age</string>

    <string name="please_enter_mail_id">please enter Email Id</string>
    <string name="please_enter_valid_mail_id">please enter valid Email Id</string>
    <string name="please_enter_password">please enter Password</string>
    <string name="please_enter_confirm_password">please enter Confirm Password</string>
    <string name="please_enter_name">please enter Name</string>
    <string name="please_enter_phone_number">please enter Phone Number</string>
    <string name="please_enter_valid_phone_number">please enter valid Phone Number</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="type_1_contest">TYPE 1 Contest</string>
    <string name="type_2_contest">TYPE 2 Contest</string>
    <string name="add_photo">Add Photo!</string>
    <string name="my_images">MyImages</string>
    <string name="profile_uploaded_successfully">Profile Uploaded Successfully</string>
    <string name="update_image">Update Image</string>
    <string name="set_as_profile_image">Set as Profile Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="can_t_delete">Can\'t Delete</string>
    <string name="can_t_update">Can\'t Update</string>
    <string name="profile_deleted_successfully">Profile Deleted Successfully</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trending">Trending</string>
    <string name="following">Following</string>
    <string name="introduced">Introduced</string>
    <string name="enter_mirror_name">Enter page name</string>
    <string name="search">Search</string>
    <string name="what_you_feel_about_this_celebrity">What you feel about this page?</string>
    <string name="admire">Admire</string>
    <string name="hate">Hate</string>
    <string name="can_t_say">Can\'t say</string>
    <string name="okay">Okay</string>
    <string name="unvote">Unvote</string>
    <string name="category">CATEGORY-</string>
    <string name="wiki_link">WIKILINK-</string>
    <string name="created_by">CREATED BY-</string>
    <string name="created_by_">Created by:-</string>
    <string name="related_contest">Related Contest</string>
    <string name="reflections">Reflections</string>
    <string name="recent_post">Recent post</string>
    <string name="demonetization">Demonetization</string>
    <string name="comments">Comments</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="anonymous">anonymous</string>
    <string name="search_text_is_not_valid">search text is not valid</string>
    <string name="search_for_mirror">Search for page</string>
    <string name="mirror_created_successfully">Page created successfully</string>
    <string name="enter_question">Enter question</string>
    <string name="related_mirror">Related page</string>
    <string name="options">Options</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="create">Create</string>
    <string name="post_remove_successfully">Post remove successfully</string>
    <string name="facebook_app_id">2080260612221483</string>
    <!--<string name="facebook_app_id">249781929087963</string>-->
    <!--<string name="facebook_app_id">309234176325874</string>-->
    <string name="fb_login_protocol_scheme">fb2080260612221483</string>
    <string name="create_post">Create post</string>
    <string name="post_info">Post info</string>
    <string name="can_t_add_a_post">Can\'t add a post</string>
    <string name="create_contest">Create Contest</string>
    <string name="what_you_feel_about_exit_poll">What you feel about this exit poll?</string>
    <string name="recent_exit_polls">Recent Exit Polls</string>
    <string name="update_post">Update Post</string>
    <string name="remove_post">Remove Post</string>
    <string name="send">Send</string>
    <string name="add_comment_successfully">Add Comment Successfully</string>
    <string name="update_comment">Update Comment</string>
    <string name="remove_comment">Remove Comment</string>
    <string name="invalid_credential">Invalid credential</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="create_mirror_message">Are you sure you want to create this page</string>
    <string name="facebook_error_message">Please install facebook to share post</string>
    <string name="home">Home</string>
    <string name="exit_polls">Exit Polls</string>
    <string name="find">Find</string>
    <string name="distance">Distance</string>
    <string name="search_arena">Search Arena</string>
    <string name="type_a_message">Type a message</string>
    <string name="sender_name">sender name</string>
    <string name="message">message</string>
    <string name="time">time</string>
    <string name="_mirror_">(pages)</string>
    <string name="current_location">Current Location</string>
    <string name="guest_user_message">You are a guest user. Please sign up to use pendulum feature.</string>
    <string name="please_vote_on_mirror_to_create_a_post">Please vote on page to create a post</string>
    <string name="please_vote_on_mirror_to_see_reflection">Please vote on page to see Reflection</string>
    <string name="please_enter_valid_mirror_name">"Please enter valid page name."</string>
    <string name="about_team"><b> Team Pendulum </b>\n
1. Manish Verma\n
2. Shubham Chauhan\n
3. Rajesh Patil\n
4. Sunil Dhadwal\n
5. Abhinav Bansal\n
6. Kanchan Chaudhary\n\n
7. Abhishek Sharma\n
8. Pardeep Chaudhary\n
9. Sourav Pathania\n
10. Nivedan Bhardwaj</string>
    <string name="find_another_mirror">Find another page</string>
    <string name="please_fill_all_option">Please fill all option.</string>
    <string name="please_vote_on_mirror_to_cast_vote_in_this_exit_poll">Please vote on page to cast vote in this exit poll.</string>
    <string name="please_fill_at_least_2_option_field">Please fill at least 2 option field.</string>
    <string name="please_enter_related_mirror_field">Please enter related page field.</string>
    <string name="guest_user">Guest user</string>
    <string name="verify_code">Verify Code</string>
    <string name="enter_code">ENTER CODE</string>
    <string name="please_enter_code">please enter Code</string>
    <string name="please_enter_valid_code">please enter valid code</string>
    <string name="invalid_code">Invalid Code Entered</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="set_password" >Set Password</string>
</resources>
