<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_25sdp"
    tools:context=".activity.login.LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_105sdp"
        android:layout_above="@+id/input_layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:contentDescription="@string/image"
        app:civ_border_color="@color/white"
        android:src="@drawable/profile"
        app:civ_border_width="2dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/email_id">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="55"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email"
        android:layout_marginTop="10dp"
        android:hint="@string/password">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="55"
            android:singleLine="true"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_layout_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/_7sdp"
        android:padding="@dimen/_5sdp"
        android:text="@string/forgot"
        android:textColor="@color/colorDarkBlue" />

    <Button
        android:id="@+id/bt_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_password"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/custom_rounded_button"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/need_account"
        android:textColor="@color/colorDarkBlue"
        android:textSize="@dimen/_15sdp" />

</RelativeLayout>