<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="@dimen/_3sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_what_you_feel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/what_you_feel_about_this_celebrity"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/tv_what_you_feel_text"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/darkGreyBackground" />

        <RadioGroup
            android:id="@+id/rg_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp">

            <RadioButton
                android:id="@+id/rb_admire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/admire"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rb_hate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/hate"
                android:textSize="@dimen/_14sdp" />

            <RadioButton
                android:id="@+id/rb_can_t_say"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/can_t_say"
                android:textSize="@dimen/_14sdp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_vote"
            android:layout_marginTop="@dimen/_40sdp"
            android:weightSum="2">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/okay"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorDarkGray"
                android:paddingBottom="@dimen/_5sdp"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>