<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/root_view"
    tools:context=".activity.login.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_126sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/colorAccent"
            android:contentDescription="@string/image" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/button_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_capital"
                android:paddingTop="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/button_color"
                android:textSize="@dimen/_13sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/button_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_id"
                android:paddingTop="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/button_color"
                android:textSize="@dimen/_13sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/button_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_capital"
                android:paddingTop="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/button_color"
                android:textSize="@dimen/_13sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/button_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_capital"
                android:paddingTop="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/button_color"
                android:textSize="@dimen/_13sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColorHint="@color/button_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password_capital"
                android:paddingTop="@dimen/_7sdp"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textColorHint="@color/button_color"
                android:textSize="@dimen/_13sdp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_rounded_button"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/already_have_an_account_sign_in"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>
</ScrollView>