<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MirrorSearchFragment">

    <RelativeLayout
        android:id="@+id/rl_mirror_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_mirror"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_see_more" />

        <TextView
            android:id="@+id/tv_see_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/see_more"
            android:textSize="@dimen/_15sdp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tv_no_result_found"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_no_result_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt_create_mirror"
            android:layout_centerHorizontal="true"
            android:text="@string/no_result_found"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/bt_create_mirror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/custom_blue_button"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingStart="@dimen/_15sdp"
            android:text="@string/create_mirror"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>

</FrameLayout>